k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudnotes
  labels:
    app: cloudnotes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudnotes
  template:
    metadata:
      labels:
        app: cloudnotes
    spec:
      containers:
        - name: cloudnotes
          image: sujithkumar01/cloudnotes:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
